@@ -15,7 +15,7 @@ java {
 }
 
 javafx {
-    version = "23.0.1"
+    version = "25.0.1"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
@@ -47,5 +47,10 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 tasks.withType(JavaExec).configureEach {
-    jvmArgs += ["--enable-preview"]
+    jvmArgs += [
+        "--enable-preview",
+        "--add-opens", "javafx.graphics/com.sun.glass.utils=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/com.sun.marlin=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    ]
 }
